--- a/v2/src/templates/home.html
+++ b/v2/src/templates/home.html
@@ -87,6 +87,7 @@
             <code>GET /chamados?departamento=ID</code>: Listar chamados por
             departamento
           </li>
+          <li><code>PATCH /chamados</code>: Atualizar chamados manualmente</li>
         </ul>
       </div>
     </div>
